--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       CONJUR_PASSWORD_ALICE: secret
       CONJUR_DATA_KEY:
       RAILS_ENV:
+      POSTGRES_PASSWORD: postgres_secret
     ports:
       - "3000:3000"
     expose:
